--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>The Portfolio of Kevin Oh</title>
-	</head>
-	<body>
-		<div class="container">
-			<h1>Coming Soon!</h1>
-		</div>
-	</body>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>The Portfolio of Kevin Oh</title>
+</head>
+<body>
+<br><br><br><br><br><br><br>
+<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
+<tr>
+<td align="center">
+<h1 style="margin:0;padding:0;font-family: trebuchet ms;">This Website is Under Construction.
+<br><small style="color: #888;" align="center">Come Back Soon.</small>
+</h1>
+</td>
+</tr>
+</table>
+</body>
 </html>
